--- a/beszel/site/src/locales/en/translation.json
+++ b/beszel/site/src/locales/en/translation.json
@@ -9,7 +9,7 @@
     "continue": "Continue",
     "home": {
         "active_alerts": "Active Alerts",
-        "active_des": "Exceeds {{value}}{{unit}} average in last {{minutes}} minutes",
+        "active_des": "Exceeds {{value}}{{unit}} average in last {{minutes}} min",
         "subtitle_1": "Updated in real time. Press",
         "subtitle_2": "to open the command palette."
     },
