--- a/beszel/site/src/locales/ru/translation.json
+++ b/beszel/site/src/locales/ru/translation.json
@@ -173,6 +173,22 @@
         "temperature_des": "Температуры датчиков системы",
         "usage": "Использование",
         "disk_usage_of": "Использование диска",
-        "throughput_of": "Пропускная способность"
+        "throughput_of": "Пропускная способность",
+        "waiting_for": "Ожидание достаточного количества записей для отображения"
+    },
+    "auth": {
+        "login": "Пожалуйста, войдите в свою учетную запись",
+        "reset": "Введите адрес электронной почты для сброса пароля",
+        "create": "Пожалуйста, создайте учетную запись администратора",
+        "create_account": "Создать учетную запись",
+        "sign_in": "Войти",
+        "openid_des": "Beszel поддерживает OpenID Connect и многих поставщиков аутентификации OAuth2.",
+        "please_view_the": "Пожалуйста, ознакомьтесь с",
+        "for_instructions": "для получения инструкций.",
+        "forgot_password": "Забыли пароль?",
+        "reset_password": "Сбросить пароль",
+        "command_line_instructions": "Инструкции по командной строке",
+        "command_1": "Если вы потеряли пароль от своей учетной записи администратора, вы можете сбросить его, используя следующую команду.",
+        "command_2": "Затем войдите в бэкэнд и сбросьте пароль своей учетной записи пользователя в таблице пользователей."
     }
 }
