--- a/beszel/site/src/locales/en/translation.json
+++ b/beszel/site/src/locales/en/translation.json
@@ -1,178 +1,193 @@
 {
-	"all_systems": "All Systems",
-	"filter": "Filter...",
-	"copy": "Copy",
-	"add": "Add",
-	"system": "System",
-	"systems": "Systems",
-	"cancel": "Cancel",
-	"continue": "Continue",
-	"home": {
-		"active_alerts": "Active Alerts",
-		"active_des": "Exceeds {{value}}{{unit}} average in last {{minutes}} min",
-		"subtitle_1": "Updated in real time. Click on a system to view information.",
-		"subtitle_2": "to open the command palette."
-	},
-	"systems_table": {
-		"system": "System",
-		"memory": "Memory",
-		"cpu": "CPU",
-		"disk": "Disk",
-		"net": "Net",
-		"agent": "Agent",
-		"no_systems_found": "No systems found.",
-		"open_menu": "Open menu",
-		"resume": "Resume",
-		"pause": "Pause",
-		"copy_host": "Copy host",
-		"delete": "Delete",
-		"delete_confirm": "Are you sure you want to delete {{name}}?",
-		"delete_confirm_des_1": "This action cannot be undone. This will permanently delete all current records for",
-		"delete_confirm_des_2": "from the database."
-	},
-	"alerts": {
-		"title": "Alerts",
-		"subtitle_1": "See",
-		"notification_settings": "notification settings",
-		"subtitle_2": "to configure how you receive alerts.",
-		"overwrite_existing_alerts": "Overwrite existing alerts",
-		"info": {
-			"status": "Status",
-			"status_des": "Triggers when status switches between up and down.",
-			"cpu_usage": "CPU Usage",
-			"cpu_usage_des": "Triggers when CPU usage exceeds a threshold.",
-			"memory_usage": "Memory Usage",
-			"memory_usage_des": "Triggers when memory usage exceeds a threshold.",
-			"disk_usage": "Disk Usage",
-			"disk_usage_des": "Triggers when usage of any disk exceeds a threshold.",
-			"bandwidth": "Bandwidth",
-			"bandwidth_des": "Triggers when combined up/down exceeds a threshold.",
-			"temperature": "Temperature",
-			"temperature_des": "Triggers when any sensor exceeds a threshold."
-		},
-		"average_exceeds": "Average exceeds",
-		"for": "For",
-		"minute": "minute",
-		"minutes": "minutes"
-	},
-	"settings": {
-		"settings": "Settings",
-		"subtitle": "Manage display and notification preferences.",
-		"save_settings": "Save Settings",
-		"export_configuration": "Export configuration",
-		"general": {
-			"title": "General",
-			"subtitle": "Change general application options.",
-			"language": {
-				"title": "Language",
-				"subtitle_1": "Want to help us make our translations even better? Check out",
-				"subtitle_2": "for more details.",
-				"preferred_language": "Preferred Language"
-			},
-			"chart_options": {
-				"title": "Chart options",
-				"subtitle": "Adjust display options for charts.",
-				"default_time_period": "Default time period",
-				"default_time_period_des": "Sets the default time range for charts when a system is viewed."
-			}
-		},
-		"notifications": {
-			"title": "Notifications",
-			"subtitle_1": "Configure how you receive alert notifications.",
-			"subtitle_2": "Looking instead for where to create alerts? Click the bell",
-			"subtitle_3": "icons in the systems table.",
-			"email": {
-				"title": "Email notifications",
-				"please": "Please",
-				"configure_an_SMTP_server": "configure an SMTP server",
-				"to_ensure_alerts_are_delivered": "to ensure alerts are delivered.",
-				"to_email_s": "To email(s)",
-				"enter_email_address": "Enter email address...",
-				"des": "Save address using enter key or comma. Leave blank to disable email notifications."
-			},
-			"webhook_push": {
-				"title": "Webhook / Push notifications",
-				"des_1": "Beszel uses",
-				"des_2": "to integrate with popular notification services.",
-				"add_url": "Add URL"
-			}
-		},
-		"yaml_config": {
-			"short_title": "YAML Config",
-			"title": "YAML Configuration",
-			"subtitle": "Export your current systems configuration.",
-			"des_1": "Systems may be managed in a",
-			"des_2": "file inside your data directory.",
-			"des_3": "On each restart, systems in the database will be updated to match the systems defined in the file.",
-			"alert": {
-				"title": "Caution - potential data loss",
-				"des_1": "Existing systems not defined in",
-				"des_2": "will be deleted. Please make regular backups."
-			}
-		},
-		"language": "Language"
-	},
-	"user_dm": {
-		"users": "Users",
-		"logs": "Logs",
-		"backups": "Backups",
-		"auth_providers": "Auth Providers",
-		"log_out": "Log Out"
-	},
-	"themes": {
-		"toggle_theme": "Toggle theme",
-		"light": "Light",
-		"dark": "Dark",
-		"system": "System"
-	},
-	"add_system": {
-		"add_new_system": "Add New System",
-		"binary": "Binary",
-		"dialog_des_1": "The agent must be running on the system to connect. Copy the",
-		"dialog_des_2": "for the agent below.",
-		"name": "Name",
-		"host_ip": "Host / IP",
-		"port": "Port",
-		"public_key": "Public Key",
-		"click_to_copy": "Click to copy",
-		"command": "command",
-		"add_system": "Add system"
-	},
-	"command": {
-		"search": "Search for systems or settings...",
-		"pages_settings": "Pages / Settings",
-		"dashboard": "Dashboard",
-		"documentation": "Documentation",
-		"SMTP_settings": "SMTP settings",
-		"page": "Page",
-		"admin": "Admin"
-	},
-	"monitor": {
-		"toggle_grid": "Toggle grid",
-		"average": "Average",
-		"max_1_min": "Max 1 min ",
-		"total_cpu_usage": "Total CPU Usage",
-		"cpu_des": "system-wide CPU utilization",
-		"docker_cpu_usage": "Docker CPU Usage",
-		"docker_cpu_des": "Average CPU utilization of containers",
-		"total_memory_usage": "Total Memory Usage",
-		"memory_des": "Precise utilization at the recorded time",
-		"docker_memory_usage": "Docker Memory Usage",
-		"docker_memory_des": "Memory usage of docker containers",
-		"disk_space": "Disk Space",
-		"disk_des": "Usage of root partition",
-		"disk_io": "Disk I/O",
-		"disk_io_des": "Throughput of root filesystem",
-		"bandwidth": "Bandwidth",
-		"bandwidth_des": "Network traffic of public interfaces",
-		"docker_network_io": "Docker Network I/O",
-		"docker_network_io_des": "Network traffic of docker containers",
-		"swap_usage": "Swap Usage",
-		"swap_des": "Swap space used by the system",
-		"temperature": "Temperature",
-		"temperature_des": "Temperatures of system sensors",
-		"usage": "Usage",
-		"disk_usage_of": "Disk usage of",
-		"throughput_of": "Throughput of"
-	}
+    "all_systems": "All Systems",
+    "filter": "Filter...",
+    "copy": "Copy",
+    "add": "Add",
+    "system": "System",
+    "systems": "Systems",
+    "cancel": "Cancel",
+    "continue": "Continue",
+    "home": {
+        "active_alerts": "Active Alerts",
+        "active_des": "Exceeds {{value}}{{unit}} average in last {{minutes}} minutes",
+        "subtitle_1": "Updated in real time. Click on a system to view information.",
+    },
+    "systems_table": {
+        "system": "System",
+        "memory": "Memory",
+        "cpu": "CPU",
+        "disk": "Disk",
+        "net": "Net",
+        "agent": "Agent",
+        "no_systems_found": "No systems found.",
+        "open_menu": "Open menu",
+        "resume": "Resume",
+        "pause": "Pause",
+        "copy_host": "Copy host",
+        "delete": "Delete",
+        "delete_confirm": "Are you sure you want to delete {{name}}?",
+        "delete_confirm_des_1": "This action cannot be undone. This will permanently delete all current records for",
+        "delete_confirm_des_2": "from the database."
+    },
+    "alerts": {
+        "title": "Alerts",
+        "subtitle_1": "See",
+        "notification_settings": "notification settings",
+        "subtitle_2": "to configure how you receive alerts.",
+        "overwrite_existing_alerts": "Overwrite existing alerts",
+        "info": {
+            "status": "Status",
+            "status_des": "Triggers when status switches between up and down.",
+            "cpu_usage": "CPU Usage",
+            "cpu_usage_des": "Triggers when CPU usage exceeds a threshold.",
+            "memory_usage": "Memory Usage",
+            "memory_usage_des": "Triggers when memory usage exceeds a threshold.",
+            "disk_usage": "Disk Usage",
+            "disk_usage_des": "Triggers when usage of any disk exceeds a threshold.",
+            "bandwidth": "Bandwidth",
+            "bandwidth_des": "Triggers when combined up/down exceeds a threshold.",
+            "temperature": "Temperature",
+            "temperature_des": "Triggers when any sensor exceeds a threshold."
+        },
+        "average_exceeds": "Average exceeds",
+        "for": "For",
+        "minute": "minute",
+        "minutes": "minutes"
+    },
+    "settings": {
+        "settings": "Settings",
+        "subtitle": "Manage display and notification preferences.",
+        "save_settings": "Save Settings",
+        "export_configuration": "Export configuration",
+        "general": {
+            "title": "General",
+            "subtitle": "Change general application options.",
+            "language": {
+                "title": "Language",
+                "subtitle_1": "Want to help us make our translations even better? Check out",
+                "subtitle_2": "for more details.",
+                "preferred_language": "Preferred Language"
+            },
+            "chart_options": {
+                "title": "Chart options",
+                "subtitle": "Adjust display options for charts.",
+                "default_time_period": "Default time period",
+                "default_time_period_des": "Sets the default time range for charts when a system is viewed."
+            }
+        },
+        "notifications": {
+            "title": "Notifications",
+            "subtitle_1": "Configure how you receive alert notifications.",
+            "subtitle_2": "Looking instead for where to create alerts? Click the bell",
+            "subtitle_3": "icons in the systems table.",
+            "email": {
+                "title": "Email notifications",
+                "please": "Please",
+                "configure_an_SMTP_server": "configure an SMTP server",
+                "to_ensure_alerts_are_delivered": "to ensure alerts are delivered.",
+                "to_email_s": "To email(s)",
+                "enter_email_address": "Enter email address...",
+                "des": "Save address using enter key or comma. Leave blank to disable email notifications."
+            },
+            "webhook_push": {
+                "title": "Webhook / Push notifications",
+                "des_1": "Beszel uses",
+                "des_2": "to integrate with popular notification services.",
+                "add_url": "Add URL"
+            }
+        },
+        "yaml_config": {
+            "short_title": "YAML Config",
+            "title": "YAML Configuration",
+            "subtitle": "Export your current systems configuration.",
+            "des_1": "Systems may be managed in a",
+            "des_2": "file inside your data directory.",
+            "des_3": "On each restart, systems in the database will be updated to match the systems defined in the file.",
+            "alert": {
+                "title": "Caution - potential data loss",
+                "des_1": "Existing systems not defined in",
+                "des_2": "will be deleted. Please make regular backups."
+            }
+        },
+        "language": "Language"
+    },
+    "user_dm": {
+        "users": "Users",
+        "logs": "Logs",
+        "backups": "Backups",
+        "auth_providers": "Auth Providers",
+        "log_out": "Log Out"
+    },
+    "themes": {
+        "toggle_theme": "Toggle theme",
+        "light": "Light",
+        "dark": "Dark",
+        "system": "System"
+    },
+    "add_system": {
+        "add_new_system": "Add New System",
+        "binary": "Binary",
+        "dialog_des_1": "The agent must be running on the system to connect. Copy the",
+        "dialog_des_2": "for the agent below.",
+        "name": "Name",
+        "host_ip": "Host / IP",
+        "port": "Port",
+        "public_key": "Public Key",
+        "click_to_copy": "Click to copy",
+        "command": "command",
+        "add_system": "Add system"
+    },
+    "command": {
+        "search": "Search for systems or settings...",
+        "pages_settings": "Pages / Settings",
+        "dashboard": "Dashboard",
+        "documentation": "Documentation",
+        "SMTP_settings": "SMTP settings",
+        "page": "Page",
+        "admin": "Admin"
+    },
+    "monitor": {
+        "toggle_grid": "Toggle grid",
+        "average": "Average",
+        "max_1_min": "Max 1 min ",
+        "total_cpu_usage": "Total CPU Usage",
+        "cpu_des": "system-wide CPU utilization",
+        "docker_cpu_usage": "Docker CPU Usage",
+        "docker_cpu_des": "Average CPU utilization of containers",
+        "total_memory_usage": "Total Memory Usage",
+        "memory_des": "Precise utilization at the recorded time",
+        "docker_memory_usage": "Docker Memory Usage",
+        "docker_memory_des": "Memory usage of docker containers",
+        "disk_space": "Disk Space",
+        "disk_des": "Usage of root partition",
+        "disk_io": "Disk I/O",
+        "disk_io_des": "Throughput of root filesystem",
+        "bandwidth": "Bandwidth",
+        "bandwidth_des": "Network traffic of public interfaces",
+        "docker_network_io": "Docker Network I/O",
+        "docker_network_io_des": "Network traffic of docker containers",
+        "swap_usage": "Swap Usage",
+        "swap_des": "Swap space used by the system",
+        "temperature": "Temperature",
+        "temperature_des": "Temperatures of system sensors",
+        "usage": "Usage",
+        "disk_usage_of": "Disk usage of",
+        "throughput_of": "Throughput of",
+        "waiting_for": "Waiting for enough records to display"
+    },
+    "auth": {
+        "login": "Please sign in to your account",
+        "reset": "Enter email address to reset password",
+        "create": "Please create an admin account",
+        "create_account": "Create account",
+        "sign_in": "Sign in",
+        "openid_des": "Beszel supports OpenID Connect and many OAuth2 authentication providers.",
+        "please_view_the": "Please view the",
+        "for_instructions": "for instructions.",
+        "forgot_password": "Forgot password?",
+        "reset_password": "Reset Password",
+        "command_line_instructions": "Command line instructions",
+        "command_1": "If you've lost the password to your admin account, you may reset it using the following command.",
+        "command_2": "Then log into the backend and reset your user account password in the users table."
+    }
 }
