--- a/beszel/site/src/locales/ar/translation.json
+++ b/beszel/site/src/locales/ar/translation.json
@@ -3,6 +3,7 @@
 	"filter": "تصفية...",
 	"copy": "نسخ",
 	"add": "إضافة",
+	"search": "بحث",
 	"system": "نظام",
 	"systems": "الأنظمة",
 	"cancel": "إلغاء",
@@ -10,7 +11,7 @@
 	"home": {
 		"active_alerts": "التنبيهات النشطة",
 		"active_des": "يتجاوز متوسط {{value}}{{unit}} في آخر {{minutes}} دقيقة",
-		"subtitle_1": "يتم التحديث في الوقت الفعلي. انقر على نظام لعرض المعلومات."
+		"subtitle": "يتم التحديث في الوقت الفعلي. انقر على نظام لعرض المعلومات."
 	},
 	"systems_table": {
 		"system": "النظام",
@@ -44,7 +45,7 @@
 			"memory_usage_des": "يتم التفعيل عندما يتجاوز استخدام الذاكرة الحد المعين.",
 			"disk_usage": "استخدام القرص",
 			"disk_usage_des": "يتم التفعيل عندما يتجاوز استخدام أي قرص الحد المعين.",
-			"bandwidth": "عرض النطاق",
+			"bandwidth": "رض النطاق",
 			"bandwidth_des": "يتم التفعيل عندما يتجاوز مجموع الرفع/التنزيل الحد المعين.",
 			"temperature": "درجة الحرارة",
 			"temperature_des": "يتم التفعيل عندما يتجاوز أي مستشعر الحد المعين."
@@ -173,5 +174,10 @@
 		"usage": "الاستخدام",
 		"disk_usage_of": "استخدام القرص لـ",
 		"throughput_of": "معدل نقل البيانات لـ"
+	},
+	"clipboard": {
+		"copied": "تم النسخ إلى الحافظة",
+		"title": "نسخ النص",
+		"des": "النسخ التلقائي يتطلب سياقاً آمناً."
 	}
 }
