--- a/beszel/site/src/locales/ru/translation.json
+++ b/beszel/site/src/locales/ru/translation.json
@@ -3,6 +3,7 @@
 	"filter": "Фильтр...",
 	"copy": "Копировать",
 	"add": "Добавить",
+	"search": "Поиск",
 	"system": "Система",
 	"systems": "Системы",
 	"cancel": "Отмена",
@@ -10,8 +11,7 @@
 	"home": {
 		"active_alerts": "Активные предупреждения",
 		"active_des": "Превышает {{value}}{{unit}} в среднем за последние {{minutes}} минут",
-		"subtitle_1": "Обновляется в реальном времени. Нажмите",
-		"subtitle_2": "чтобы открыть палитру команд."
+		"subtitle": "Обновляется в реальном времени. Нажмите на систему для просмотра информации."
 	},
 	"systems_table": {
 		"system": "Система",
@@ -190,5 +190,10 @@
 		"command_line_instructions": "Инструкции по командной строке",
 		"command_1": "Если вы потеряли пароль от своей учетной записи администратора, вы можете сбросить его, используя следующую команду.",
 		"command_2": "Затем войдите в бэкэнд и сбросьте пароль своей учетной записи пользователя в таблице пользователей."
+	},
+	"clipboard": {
+		"copied": "Скопировано в буфер обмена",
+		"title": "Копировать текст",
+		"des": "Автоматическое копирование требует безопасного контекста."
 	}
 }
