update translations + add Portuguese and Korean

--- a/beszel/site/src/locales/ar/translation.json
+++ b/beszel/site/src/locales/ar/translation.json
@@ -133,7 +133,7 @@
 		"name": "الاسم",
 		"host_ip": "المضيف / IP",
 		"port": "المنفذ",
-		"public_key": "المفتاح العام",
+		"key": "المفتاح العام",
 		"click_to_copy": "انقر للنسخ",
 		"command": "الأمر",
 		"add_system": "إضافة نظام"
