--- a/beszel/site/src/locales/ja/translation.json
+++ b/beszel/site/src/locales/ja/translation.json
@@ -18,8 +18,8 @@
 		"memory": "メモリ",
 		"cpu": "CPU",
 		"disk": "ディスク",
-		"net": "ネットワーク",
-		"agent": "エージェント",
+		"net": "帯域",
+		"agent": "エージ",
 		"no_systems_found": "システムが見つかりません。",
 		"open_menu": "メニューを開く",
 		"resume": "再開",
@@ -133,7 +133,7 @@
 		"name": "名前",
 		"host_ip": "ホスト / IP",
 		"port": "ポート",
-		"public_key": "公開鍵",
+		"key": "公開鍵",
 		"click_to_copy": "クリックでコピー",
 		"command": "コマンド",
 		"add_system": "システムを追加"
