--- a/beszel/site/src/locales/ru/translation.json
+++ b/beszel/site/src/locales/ru/translation.json
@@ -133,7 +133,7 @@
 		"name": "Имя",
 		"host_ip": "Хост / IP",
 		"port": "Порт",
-		"public_key": "Публичный ключ",
+		"key": "Ключ",
 		"click_to_copy": "Нажмите, чтобы скопировать",
 		"command": "команда",
 		"add_system": "Добавить систему"
