--- a/beszel/site/src/locales/ja/translation.json
+++ b/beszel/site/src/locales/ja/translation.json
@@ -148,7 +148,7 @@
 		"admin": "管理者"
 	},
 	"monitor": {
-		"toggle_grid": "グリッド切替",
+		"toggle_grid": "グリッド切り替え",
 		"average": "平均",
 		"max_1_min": "1分間の最大値",
 		"total_cpu_usage": "CPU使用率合計",
@@ -158,22 +158,38 @@
 		"total_memory_usage": "メモリ使用率合計",
 		"memory_des": "記録時点での正確な使用率",
 		"docker_memory_usage": "Dockerメモリ使用率",
-		"docker_memory_des": "Dockerコンテナのメモリ使用率",
+		"docker_memory_des": "Dockerコンテナのメモリ使用量",
 		"disk_space": "ディスク容量",
 		"disk_des": "ルートパーティションの使用率",
 		"disk_io": "ディスクI/O",
 		"disk_io_des": "ルートファイルシステムのスループット",
 		"bandwidth": "帯域幅",
 		"bandwidth_des": "パブリックインターフェースのネットワークトラフィック",
-		"docker_network_io": "Dockerネットワークl/O",
-		"docker_network_io_des": "Dockerコンテナのネットワークトラフック",
+		"docker_network_io": "Dockerネットワークの入出力",
+		"docker_network_io_des": "Dockerコンテナのネットワークトラフィック",
 		"swap_usage": "スワップ使用率",
 		"swap_des": "システムが使用するスワップ領域",
 		"temperature": "温度",
 		"temperature_des": "システムセンサーの温度",
 		"usage": "使用率",
 		"disk_usage_of": "のディスク使用率",
-		"throughput_of": "のスループット"
+		"throughput_of": "のスループット",
+		"waiting_for": "表示に必要な記録を待機中"
+	},
+	"auth": {
+		"login": "アカウントにサインインしてください",
+		"reset": "パスワードをリセットするメールアドレスを入力",
+		"create": "管理者アカウントを作成してください",
+		"create_account": "アカウント作成",
+		"sign_in": "サインイン",
+		"openid_des": "BeszelはOpenID ConnectとさまざまなOAuth2認証プロバイダーをサポートしています。",
+		"please_view_the": "詳細については",
+		"for_instructions": "をご確認ください。",
+		"forgot_password": "パスワードをお忘れですか？",
+		"reset_password": "パスワードリセット",
+		"command_line_instructions": "コマンドライン手順",
+		"command_1": "管理者アカウントのパスワードを紛失した場合、以下のコマンドでリセットできます。",
+		"command_2": "その後、バックエンドにログインしてユーザーテーブルでアカウントパスワードをリセットしてください。"
 	},
 	"clipboard": {
 		"copied": "クリップボードにコピーしました",
