--- a/beszel/site/src/locales/ru/translation.json
+++ b/beszel/site/src/locales/ru/translation.json
@@ -50,7 +50,7 @@
 			"temperature": "Температура",
 			"temperature_des": "Срабатывает, когда любой датчик превышает порог."
 		},
-		"average_exceeds": "Среднее значение превышает",
+		"average_exceeds": "Среднее превышает",
 		"for": "За",
 		"minute": "минуту",
 		"minutes": "минут"
