--- a/beszel/site/src/locales/ar/translation.json
+++ b/beszel/site/src/locales/ar/translation.json
@@ -38,17 +38,15 @@
 		"overwrite_existing_alerts": "استبدال التنبيهات الموجودة",
 		"info": {
 			"status": "الحالة",
-			"status_des": "يتم التفعيل عند تغير الحالة بين متصل ومنقطع.",
+			"status_des": "يتم التشغيل عند تبديل الحالة بين متصل ومنقطع.",
 			"cpu_usage": "استخدام المعالج",
-			"cpu_usage_des": "يتم التفعيل عندما يتجاوز استخدام المعالج الحد المعين.",
+			"cpu_usage_des": "يتم التشغيل عندما يتجاوز استخدام المعالج الحد.",
 			"memory_usage": "استخدام الذاكرة",
-			"memory_usage_des": "يتم التفعيل عندما يتجاوز استخدام الذاكرة الحد المعين.",
+			"memory_usage_des": "يتم التشغيل عندما يتجاوز استخدام الذاكرة الحد.",
 			"disk_usage": "استخدام القرص",
-			"disk_usage_des": "يتم التفعيل عندما يتجاوز استخدام أي قرص الحد المعين.",
-			"bandwidth": "رض النطاق",
-			"bandwidth_des": "يتم التفعيل عندما يتجاوز مجموع الرفع/التنزيل الحد المعين.",
-			"temperature": "درجة الحرارة",
-			"temperature_des": "يتم التفعيل عندما يتجاوز أي مستشعر الحد المعين."
+			"disk_usage_des": "يتم التشغيل عندما يتجاوز استخدام أي قرص الحد.",
+			"bandwidth": "النطاق الترددي",
+			"bandwidth_des": "يتم التشغيل عندما يتجاوز استخدام الشبكة الحد."
 		},
 		"average_exceeds": "المتوسط يتجاوز",
 		"for": "لمدة",
@@ -100,14 +98,14 @@
 		"yaml_config": {
 			"short_title": "تكوين YAML",
 			"title": "تكوين YAML",
-			"subtitle": "تصدير تكوين الأنظمة الحالي.",
-			"des_1": "يمكن إدارة الأنظمة في ملف",
-			"des_2": "داخل دليل البيانات الخاص بك.",
-			"des_3": "عند كل إعادة تشغيل، سيتم تحديث الأنظمة في قاعدة البيانات لتتطابق مع الأنظمة المحددة في الملف.",
+			"subtitle": "تصدير تكوين النظام الحالي.",
+			"des_1": "يستخدم النظام",
+			"des_2": "ملف تكوين لإدارة البيانات",
+			"des_3": "عند كل إعادة تشغيل، سيتم تحديث الأنظمة في قاعدة البيانات لتطابق الأنظمة المحددة في الملف.",
 			"alert": {
-				"title": "تنبيه - احتمال فقدان البيانات",
+				"title": "تحذير - احتمال فقدان البيانات",
 				"des_1": "الأنظمة الموجودة غير المحددة في",
-				"des_2": "سيتم حذفها. يرجى إجراء نسخ احتياطي بانتظام."
+				"des_2": "سيتم حذفها. يرجى النسخ الاحتياطي بانتظام."
 			}
 		},
 		"language": "اللغة"
@@ -127,11 +125,11 @@
 	},
 	"add_system": {
 		"add_new_system": "إضافة نظام جديد",
-		"binary": "ملف ثنائي",
-		"dialog_des_1": "يجب أن يكون الوكيل قيد التشغيل على النظام للاتصال. انسخ",
-		"dialog_des_2": "للوكيل أدناه.",
+		"binary": "الملف الثنائي",
+		"dialog_des_1": "يجب تشغيل العميل على الخادم للاتصال. انسخ",
+		"dialog_des_2": "إلى الخادم المستهدف للتثبيت.",
 		"name": "الاسم",
-		"host_ip": "المضيف / IP",
+		"host_ip": "المضيف/IP",
 		"port": "المنفذ",
 		"key": "المفتاح العام",
 		"click_to_copy": "انقر للنسخ",
@@ -139,18 +137,18 @@
 		"add_system": "إضافة نظام"
 	},
 	"command": {
-		"search": "البحث عن الأنظمة أو الإعدادات...",
+		"search": "البحث في الإعدادات أو الأنظمة...",
 		"pages_settings": "الصفحات / الإعدادات",
 		"dashboard": "لوحة التحكم",
 		"documentation": "التوثيق",
 		"SMTP_settings": "إعدادات SMTP",
-		"page": "صفحة",
+		"page": "الصفحة",
 		"admin": "المسؤول"
 	},
 	"monitor": {
 		"toggle_grid": "تبديل الشبكة",
 		"average": "المتوسط",
-		"max_1_min": "الحد الأقصى 1 دقيقة",
+		"max_1_min": "أقصى 1 دقيقة",
 		"total_cpu_usage": "إجمالي استخدام المعالج",
 		"cpu_des": "استخدام المعالج على مستوى النظام",
 		"docker_cpu_usage": "استخدام معالج Docker",
@@ -161,23 +159,39 @@
 		"docker_memory_des": "استخدام الذاكرة لحاويات Docker",
 		"disk_space": "مساحة القرص",
 		"disk_des": "استخدام القسم الجذر",
-		"disk_io": "I/O القرص",
-		"disk_io_des": "معدل نقل البيانات لنظام الملفات الجذر",
-		"bandwidth": "عرض النطاق",
-		"bandwidth_des": "حركة مرور الشبكة للواجهات العامة",
-		"docker_network_io": "I/O شبكة Docker",
-		"docker_network_io_des": "حركة مرور الشبكة لحاويات Docker",
+		"disk_io": "إدخال/إخراج القرص",
+		"disk_io_des": "معدل نقل نظام الملفات الجذر",
+		"bandwidth": "النطاق الترددي",
+		"bandwidth_des": "حركة الشبكة للواجهات العامة",
+		"docker_network_io": "إدخال/إخراج شبكة Docker",
+		"docker_network_io_des": "حركة الشبكة لحاويات Docker",
 		"swap_usage": "استخدام المبادلة",
 		"swap_des": "مساحة المبادلة المستخدمة من قبل النظام",
 		"temperature": "درجة الحرارة",
 		"temperature_des": "درجات حرارة مستشعرات النظام",
 		"usage": "الاستخدام",
 		"disk_usage_of": "استخدام القرص لـ",
-		"throughput_of": "معدل نقل البيانات لـ"
+		"throughput_of": "معدل نقل",
+		"waiting_for": "في انتظار سجلات كافية للعرض"
+	},
+	"auth": {
+		"login": "الرجاء تسجيل الدخول إلى حسابك",
+		"reset": "أدخل البريد الإلكتروني لإعادة تعيين كلمة المرور",
+		"create": "الرجاء إنشاء حساب مسؤول",
+		"create_account": "إنشاء حساب",
+		"sign_in": "تسجيل الدخول",
+		"openid_des": "يدعم Beszel OpenID Connect والعديد من مزودي مصادقة OAuth2.",
+		"please_view_the": "الرجاء مراجعة",
+		"for_instructions": "للتعليمات.",
+		"forgot_password": "نسيت كلمة المرور؟",
+		"reset_password": "إعادة تعيين كلمة المرور",
+		"command_line_instructions": "تعليمات سطر الأوامر",
+		"command_1": "إذا فقدت كلمة مرور حساب المسؤول، يمكنك إعادة تعيينها باستخدام الأمر التالي.",
+		"command_2": "ثم قم بتسجيل الدخول إلى الخلفية وإعادة تعيين كلمة مرور حساب المستخدم في جدول المستخدمين."
 	},
 	"clipboard": {
 		"copied": "تم النسخ إلى الحافظة",
 		"title": "نسخ النص",
-		"des": "النسخ التلقائي يتطلب سياقاً آمناً."
+		"des": "النسخ التلقائي يتطلب سياق آمن."
 	}
 }
