--- a/beszel/site/src/locales/vi/translation.json
+++ b/beszel/site/src/locales/vi/translation.json
@@ -8,9 +8,16 @@
 	"systems": "Các hệ thống",
 	"cancel": "Hủy",
 	"continue": "Tiếp tục",
+	"minutes_one": "{{count}} phút",
+	"minutes_other": "{{count}} phút",
+	"hours_one": "{{count}} giờ",
+	"hours_other": "{{count}} giờ",
+	"days_other": "{{count}} ngày",
+	"weeks_one": "{{count}} tuần",
+	"weeks_other": "{{count}} tuần",
 	"home": {
 		"active_alerts": "Cảnh báo đang hoạt động",
-		"active_des": "Vượt quá {{value}}{{unit}} trung bình trong {{minutes}} phút cuối",
+		"active_des": "Vượt quá {{value}}{{unit}} trong ",
 		"subtitle": "Cập nhật theo thời gian thực. Nhấp vào hệ thống để xem thông tin."
 	},
 	"systems_table": {
@@ -51,9 +58,7 @@
 			"temperature_des": "Kích hoạt khi bất kỳ cảm biến nào vượt quá ngưỡng."
 		},
 		"average_exceeds": "Trung bình vượt quá",
-		"for": "Trong",
-		"minute": "phút",
-		"minutes": "phút"
+		"for": "Trong"
 	},
 	"settings": {
 		"settings": "Cài đặt",
